kubernetes/cheshire-cat.yaml
# depends on:
# helm install cheshire-cat qdrant/qdrant
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: core
spec:
  replicas: 1
  selector:
    matchLabels:
      run: core
  template:
    metadata:
      labels:
        run: core
    spec:
      containers:
      - name: core
        image: HUB/cheshire-cat-core:1.5.1-azure
        imagePullPolicy: Always
        command: ["uvicorn", "cat.main:cheshire_cat_api", "--host", "0.0.0.0", "--port", "1865", "--forwarded-allow-ips", "*"]
        ports:
        - containerPort: 1865
        readinessProbe:
          tcpSocket:
            port: 1865
          initialDelaySeconds: 6
          periodSeconds: 10
        resources:
          requests:
            memory: "1.5Gi" # TODO: 1.5Gi ?
            cpu: "1000m" # TODO: 1 core ?
        volumeMounts:
        - name: database
          mountPath: /app/core/database
      securityContext:
          runAsUser: 1000
          runAsGroup: 1000
          fsGroup: 1000
      volumes:
      - name: database
        persistentVolumeClaim:
          claimName: tinydb-disk
---
apiVersion: v1
kind: Service
metadata:
  name: core
spec:
  ports:
  - port: 1865
    protocol: TCP
    targetPort: 1865
  selector:
    run: core
  type: ClusterIP
