kubernetes/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: cheshire-cat
  namespace: default
  annotations:
    service.beta.kubernetes.io/azure-dns-label-name: "UNIQUE_DNS_PREFIX"
    service.beta.kubernetes.io/azure-load-balancer-health-probe-request-path: "/healthz/ready"
    service.beta.kubernetes.io/port_80_health-probe_protocol: http
    service.beta.kubernetes.io/port_80_health-probe_port: "15021"
    service.beta.kubernetes.io/port_443_health-probe_protocol: http
    service.beta.kubernetes.io/port_443_health-probe_port: "15021"
    cert-manager.io/issuer: letsencrypt
spec:
  gatewayClassName: istio
  listeners:
  - name: http
    hostname: UNIQUE_DNS_PREFIX.eastus.cloudapp.azure.com
    protocol: HTTP
    port: 80
    allowedRoutes:
      namespaces:
        from: All
  - hostname: UNIQUE_DNS_PREFIX.eastus.cloudapp.azure.com
    name: https
    port: 443
    protocol: HTTPS
    allowedRoutes:
      namespaces:
        from: All
    tls:
      mode: Terminate
      certificateRefs:
          - name: cheshire-cat-tls
            kind: Secret

---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: core
  namespace: default
spec:
  parentRefs:
  - name: cheshire-cat
    namespace: default
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: core
      port: 1865

---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: admin
  namespace: default
spec:
  parentRefs:
  - name: cheshire-cat
    namespace: default
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /admin
    filters:
      - type: RequestHeaderModifier
        requestHeaderModifier:
          set:
            - name: "access_token"
              value: "SECRET_VALUE"
    backendRefs:
    - name: core
      port: 1865
